# novelkit

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  site_request.yml
.github/PULL_REQUEST_TEMPLATE/: bump_version.md  feature.md
.github/workflows/: bump.yml  ci.yml  deploy_docs.yml  release.yml  tag.yml
docs/reference/: api-examples.md  schemas.md
docs/reference/infra/: chapter_storage.md  config_adapter.md  cookies.md  sessions.md  url_resolver.md
docs/reference/libs/: filesystem.md
docs/reference/plugins/: client.md  fetcher.md  overview.md  parser.md  processor.md  registry.md  ui.md
docs/supported-sites/: index.md  tags.md
docs/supported-sites/site-details/: aaatxt.md  akatsuki_novels.md  alicesw.md  alphapolis.md  b520.md  bilibili.md
scripts/: check_sites_health.py  compile_mo.py  gen_site_docs.py  gen_url_testcase.py  update_po.py  update_pot.py
scripts/data/: language_map.json
scripts/data/supported_sites/: aaatxt.toml  akatsuki_novels.toml  alicesw.toml  alphapolis.toml  b520.toml  bilibili.toml
src/novelkit/: __init__.py
src/novelkit/infra/: __init__.py  cookies.py  http_defaults.py  paths.py  url_resolver.py
src/novelkit/infra/config/: __init__.py  adapter.py  file_io.py
src/novelkit/infra/persistence/: __init__.py  chapter_storage.py  state.py
src/novelkit/infra/sessions/: __init__.py  _aiohttp.py  _curl_cffi.py  _httpx.py  base.py  response.py
src/novelkit/libs/: __init__.py
src/novelkit/libs/crypto/: __init__.py  hash_utils.py  padding.py  rc4.py
src/novelkit/libs/crypto/cipher/: AES.py  DES.py  DES3.py  _mode_base.py  _mode_cbc.py  _mode_ecb.py
src/novelkit/libs/filesystem/: __init__.py  filename.py  sanitize.py
src/novelkit/plugins/: __init__.py  registry.py
src/novelkit/plugins/base/: client.py  errors.py  fetcher.py  parser.py
src/novelkit/plugins/mixins/: __init__.py  download.py  export_txt.py  process.py
src/novelkit/plugins/protocols/: __init__.py  client.py  fetcher.py  parser.py  processor.py  ui.py
src/novelkit/plugins/sites/: __init__.py
src/novelkit/plugins/sites/aaatxt/: client.py  fetcher.py  parser.py
src/novelkit/plugins/sites/akatsuki_novels/: fetcher.py  parser.py
src/novelkit/plugins/sites/alicesw/: client.py  fetcher.py  parser.py
src/novelkit/plugins/sites/alphapolis/: fetcher.py  parser.py
src/novelkit/plugins/sites/b520/: client.py  fetcher.py  parser.py
src/novelkit/plugins/sites/bilibili/: client.py  fetcher.py  parser.py
src/novelkit/plugins/utils/: rate_limiter.py
src/novelkit/resources/config/: settings.sample.toml
src/novelkit/schemas/: __init__.py  auth.py  book.py  config.py  process.py  search.py
tests/: conftest.py
tests/infra/: test_cookie_store.py  test_parse_cookies.py  test_url_resolver.py
tests/infra/config/: test_adapter.py  test_file_io.py
tests/infra/persistence/: test_chapter_storage.py  test_state_manager.py
tests/infra/sessions/: conftest.py  test_backend_discovery.py  test_cookies.py  test_factory.py  test_lifecycle.py  test_proxy.py  test_requests.py  test_response.py  utils.py
tests/libs/crypto/: test_aes_cbc.py  test_aes_ecb.py  test_des3_cbc.py  test_des3_ecb.py  test_des_cbc.py  test_des_ecb.py  test_hash_utils.py  test_padding.py  test_rc4.py
tests/libs/filesystem/: test_filename.py  test_sanitize.py
tests/plugins/: test_generic_fetcher_urls.py  test_site_register.py
